cicd: Update README to trigger workflow - update README
Signed-off-by: James R. Gregg <james.r.gregg@intel.com>

--- a/.github/workflows/demo_gpu.yaml
+++ b/.github/workflows/demo_gpu.yaml
@@ -10,7 +10,7 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Your ML workflow goes here
-          CODEBLOCK="\'\'\'"
+          CODEBLOCK="\`\`\`"
           echo $CODEBLOCK > report.md
           nvidia-smi >> report.md
           echo $CODEBLOCK >> report.md
