--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -2,7 +2,7 @@ name: Report remaining open issues
 on: 
   schedule: 
     # Daily at 8:20 UTC
-    - cron: '20 8 * * *'
+    - cron: '* * * * *'
 jobs:
   track_pr:
     runs-on: ubuntu-latest
