--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -1,7 +1,7 @@
 name: Report remaining open issues
 on: 
   schedule: 
-    # Daily at 8:20 UTC
+    # Every 5 minutes
     - cron: '*/5 * * * *'
 jobs:
   track_pr:
