--- a/.github/workflows/list-issues.yml
+++ b/.github/workflows/list-issues.yml
@@ -21,7 +21,7 @@ jobs:
     - name: List open issues
       id: list_issues
       run: |
-        REPOSITORIES=("special-sniffle" "barlonsalon" "barlonsalon-actions")
+        REPOSITORIES=("special-sniffle", "barlonsalon", "barlonsalon-actions")
         ISSUE_LIST=""
         for REPO in "${REPOSITORIES[@]}"; do
           ISSUES=$(curl -s -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/repos/$GITHUB_REPOSITORY/$REPO/issues?state=open")
