--- a/.github/workflows/list-issues.yml
+++ b/.github/workflows/list-issues.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  GITHUB_REPOSITORY: jamesrgregg
+  GITHUB_REPOSITORY: ${{ secrets.GH_REPO }}
 
 jobs:
   list_open_issues:
