--- a/.github/workflows/list-issues.yml
+++ b/.github/workflows/list-issues.yml
@@ -21,12 +21,12 @@ jobs:
     - name: List open issues
       id: list_issues
       run: |
-        REPOSITORIES=("jamesrgregg/special-sniffle")
+        REPOSITORIES=("jamesrgregg/special-sniffle", "jamesrgregg/barlonsalon", ("jamesrgregg/barlonsalon-actions" )
         ISSUE_LIST=""
         for REPO in "${REPOSITORIES[@]}"; do
           ISSUES=$(curl -s -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/repos/$REPO/issues?state=open")
-          # ISSUES_COUNT=$(echo $ISSUES | jq '. | length')
-          echo $ISSUES | jq '.'
+          ISSUES_COUNT=$(echo $ISSUES | jq '. | length')
+          # echo $ISSUES | jq '.'
           if [ $ISSUES_COUNT -gt 0 ]; then
             ISSUE_LIST="$ISSUE_LIST\n\n**$REPO**\n"
             for (( i=0; i<$ISSUES_COUNT; i++ )); do
