--- a/.github/workflows/list-issues.yml
+++ b/.github/workflows/list-issues.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: List open issues
       id: list_issues
@@ -31,7 +31,8 @@ jobs:
             echo "Error: $(echo $ISSUES | jq '.message')"
             exit 1
           fi
-          ISSUES_COUNT=$(echo $ISSUES_JSON | jq '. | {html_url}')
+          ISSUES_COUNT=$(echo $ISSUES_JSON)>> issues-list.json
+          cat issues-list.json | jq '.[]'
           if [ $ISSUES_COUNT -gt 0 ]; then
             ISSUE_LIST="$ISSUE_LIST\n\n**$REPO**\n"
             for (( i=0; i<$ISSUES_COUNT; i++ )); do
