--- a/.github/workflows/list-issues.yml
+++ b/.github/workflows/list-issues.yml
@@ -31,8 +31,8 @@ jobs:
             echo "Error: $(echo $ISSUES | jq '.message')"
             exit 1
           fi
-          ISSUES_COUNT=$(echo $ISSUES_JSON)>> issues-list.json
-          cat issues-list.json | jq '.[]'
+          ISSUES_COUNT=$(echo $ISSUES_JSON)
+          echo $ISSUES_COUNT | jq '.[]'
           if [ $ISSUES_COUNT -gt 0 ]; then
             ISSUE_LIST="$ISSUE_LIST\n\n**$REPO**\n"
             for (( i=0; i<$ISSUES_COUNT; i++ )); do
@@ -44,15 +44,3 @@ jobs:
         done
 
         echo "## Open Issues\n$ISSUE_LIST"
-
-    - name: Update pull request
-      uses: octokit/request-action@v2.1.7
-      with:
-        method: PATCH
-        path: /repos/${{ env.GITHUB_REPOSITORY }}/pulls/${{ env.GITHUB_PULL_REQUEST }}
-        body: |
-          {
-            "body": "${{ steps.list_issues.outputs.message }}"
-          }
-      env:
-        GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
