--- a/.github/workflows/list-issues.yml
+++ b/.github/workflows/list-issues.yml
@@ -32,7 +32,7 @@ jobs:
             exit 1
           fi
           ISSUES_COUNT=$(echo $ISSUES_JSON)
-          echo $ISSUES_COUNT | jq '.[0]'
+          echo $ISSUES_COUNT 
           if [ $ISSUES_COUNT -gt 0 ]; then
             ISSUE_LIST="$ISSUE_LIST\n\n**$REPO**\n"
             for (( i=0; i<$ISSUES_COUNT; i++ )); do
