--- a/.github/workflows/list-issues.yml
+++ b/.github/workflows/list-issues.yml
@@ -25,7 +25,7 @@ jobs:
         ISSUE_LIST=""
         for REPO in "${REPOSITORIES[@]}"; do
           ISSUES=$(curl -s -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/repos/$REPO/issues?state=open")
-          ISSUES_COUNT=$(echo $ISSUES | jq '.html_url | length')
+          ISSUES_COUNT=$(echo $ISSUES | jq '.[0] | length')
           # echo $ISSUES | jq '.'
           if [ $ISSUES_COUNT -gt 0 ]; then
             ISSUE_LIST="$ISSUE_LIST\n\n**$REPO**\n"
